# lidarLearn

./: CMakeLists.txt  README.md
include/: lidarLite.h
src/: CMakeLists.txt  lidar.c  lidarTest.c  scan.cpp
